Fix color contrast issues

--- a/styles.css
+++ b/styles.css
@@ -236,7 +236,7 @@ li a:hover {
 
 .footer i:hover {
     cursor: pointer;
-    color: #fcb971;
+    color: #e69b20;
     transition: .5s;
 }
 
